# beaver

./: .gitignore  .pylintrc  README.md  beaver_config.example.yml  requirements.txt  setup.cfg
.github/workflows/: python-test.yml
beaver/: __init__.py  version.py
beaver/builders/: __init__.py  builds.py
beaver/builders/definition/: __init__.py  core.py  tmp.py
beaver/builders/image/: __init__.py  core.py  tmp.py
beaver/db/: __init__.py  db.py  groups.py  image_usage.py  images.py  jobs.py  names.py  packages.py  users.py
beaver/http/: __init__.py  env.py  route_image_usage.py  route_images.py  route_jobs.py  route_names.py  route_packages.py  routes.py
beaver/models/: groups.py  image_usage.py  images.py  jobs.py  names.py  packages.py  users.py
beaver/tests/: __init__.py  test_api_create_update.py  test_api_gets.py  test_db_helpers.py  test_idm.py  test_parser.py
beaver/utils/idm/: __init__.py  core.py  ldap.py  local.py
beaver/utils/repository/: __init__.py  core.py  tmp.py
docs/: design.md
schemas/: schema.sql
schemas/patches/: 0.sql
typings/: .gitignore
typings/sqlalchemy/: __init__.pyi  exc.py
typings/sqlalchemy/ext/declarative/: __init__.pyi
typings/sqlalchemy/orm/: __init__.pyi  decl_api.pyi
