[metadata]
name = beaver
version = 0.0.1

[options]
packages = find:
install_requires =
    requests
    importlib; python_version == "2.6"
    fastapi
    uvicorn
    sqlalchemy
    mysql-connector-python
    python-ldap

[options.entry_points]
console_scripts = 
    beaver = beaver:beaver_main
    kit = beaver:kit_main

[pep8] 
ignore=E731